--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<span><h2>Liczba Kursów: 3</h2></span>
+<span><h3>Liczba Kursów: {{array.length}}</h3></span>
 <div >
   <ol>
     <li *ngFor="let data of array">{{data}}</li>
